--- a/.github/workflows/gpg_sign_artefacts.yaml
+++ b/.github/workflows/gpg_sign_artefacts.yaml
@@ -3,8 +3,7 @@ on:
   workflow_dispatch:
      inputs:
         release_tag_info:
-          description: enter release tag number
-          default: v2.0.0
+          description: Enter release tag number
           required: true
 permissions:
   id-token: write
@@ -18,7 +17,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Update libraries
         run: sudo apt-get update && sudo apt-get install dpkg-sig dpkg-dev -y
-      - name: Download DEB & RPM from Release “${{ github.event.inputs.tag }}”
+      - name: Download DEB & RPM from Release 
         env:
           GH_TOKEN: ${{ github.token }}      
         run: |
@@ -27,17 +26,14 @@ jobs:
             --pattern '*.rpm' \
             --pattern '*.deb' \
             --dir artefacts    
-          echo
-          echo listing downloaded artefacts
-          echo
-          ls -lrt artefacts/*
+
       - name: Setup GPG
         uses: aerospike/shared-workflows/devops/setup-gpg@feat/setup-gpg-composite
         with:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-key-pass: ${{ secrets.GPG_PASS }}
           gpg-public-key: ${{ secrets.GPG_PUBLIC_KEY }}
-          gpg-key-name: "phani"
+          gpg-key-name: ${{ secrets.GPG_KEY_NAME }}
       - name: Sign RPM Package
         env:
           GPG_TTY: no-tty
@@ -92,7 +88,7 @@ jobs:
         run: |
           TAG_NAME=${{ github.event.inputs.release_tag_info }}   
 
-           # List asset names, filter for .sha256 or .asc, then delete each
+           # List asset names, filter for rpm/deb, .sha256 or .asc, then delete each
           for file in $(gh release view "$TAG_NAME" --json assets --jq '.assets[].name' \
                             | grep -E '\.rpm$|\.deb$|\.sha256$|\.asc$'); do
             echo "removing file $file"
