OM-248 - review feedback
removed code for <artefact>.sha256.asc
added code to generate asc for tgz

--- a/.github/workflows/build_release_artifacts.yaml
+++ b/.github/workflows/build_release_artifacts.yaml
@@ -102,11 +102,16 @@
               if [ -f "$file" ]; then
                 echo "Processing $file..."
                 sha256sum "$file" > "$file.sha256"
-                gpg --armour --digest-algo sha256 --detach-sign \
-                    --no-tty --batch --yes \
-                    --passphrase "$GPG_PASSPHRASE" \
-                    --local-user "$GPG_KEY_NAME" \
-                    --output "$file.sha256.asc" "$file.sha256"
+                # if file is tgz, then generate asc file
+                if [[ "$file" == *.tgz ]]; then
+                  # asc for tgz
+                  echo "Generating asc for $file"
+                  gpg --armour --detach-sign \
+                      --no-tty --batch --yes \
+                      --passphrase "$GPG_PASSPHRASE" \
+                      --local-user "$GPG_KEY_NAME" \
+                      --output "$file.asc" "$file"                    
+                  fi                
               fi
             done
         - name: Upload artifacts to release
