--- a/.github/workflows/build_release_artifacts.yaml
+++ b/.github/workflows/build_release_artifacts.yaml
@@ -1,22 +1,17 @@
-# This workflow will build a golang project
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# GitHub Actions workflow to build Go project and package as DEB, RPM, and TGZ
 
-name: Build exporter deb,rpm and tgz artifacts
-
+name: Build exporter deb, rpm and tgz artifacts
 on:
   push:
     tags:
       - v*
-
 permissions:
   id-token: write
   actions: write
   contents: write
-
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         include:
@@ -28,16 +23,15 @@ jobs:
             make_target: package-linux-arm64
             goarch: arm64
             tar_arch: aarch64
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
       - name: Get latest tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
+        uses: actions-ecosystem/action-get-latest-tag@b7c32daec3395a9616f88548363a42652b22d435 # v1.6.0
 
       - name: Set up Snyk CLI
         uses: snyk/actions/setup@cdb760004ba9ea4d525f2e043745dfe85bb9077e
@@ -47,39 +41,94 @@ jobs:
       - name: Authenticate Snyk
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
 
-      - name: Install FPM deps
+      - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ruby ruby-dev build-essential rpm
+          sudo apt-get install -y ruby ruby-dev build-essential rpm dpkg-sig dpkg-dev
 
       - name: Install FPM
         run: |
           sudo gem install --no-document fpm
           fpm --version
 
-      - name: Build deb/rpm for ${{ matrix.arch }}
-        run: make ${{ matrix.make_target }}
+      - name: Build packages for ${{ matrix.arch }}
+        run: |
+          make ${{ matrix.make_target }}
+          make tar GOOS=linux GOARCH=${{ matrix.goarch }} ARCH=${{ matrix.tar_arch }}
 
-      - name: Build tar for ${{ matrix.arch }}
-        run: make tar GOOS=linux GOARCH=${{ matrix.goarch }} ARCH=${{ matrix.tar_arch }}
-
-      - name: Gzip tar to .tgz
+      - name: Create TGZ archives
         run: |
           cd pkg/target
+          
           gzip aerospike-prometheus-exporter*.tar
           for f in *.tar.gz; do
-            echo "Renaming $f"
             mv "$f" "${f%.tar.gz}.tgz"
           done
 
-      - name: Upload all artifacts
+      - name: Set up GPG for signing
+        uses: aerospike/shared-workflows/.github/actions/setup-gpg@dda8173aca1f1e73f95267572a7d3849cd00f1b8
+        with:
+          gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
+          gpg-public-key: ${{ secrets.GPG_PUBLIC_KEY }}
+          gpg-key-pass: ${{ secrets.GPG_PASS }}
+
+      - name: Sign packages
+        env:
+          GPG_TTY: no-tty
+          HOME: /home/runner
+          GNUPGHOME: /home/runner/.gnupg
+          GPG_PASS: ${{ secrets.GPG_PASS }}
+        run: |
+          cd pkg/target  
+
+          # Sign RPM packages
+          if ls *.rpm 1> /dev/null 2>&1; then
+            echo "Signing RPM packages..."
+            rpm --addsign *.rpm
+            rpm --checksig *.rpm
+          fi
+
+          # Sign DEB packages
+          if ls *.deb 1> /dev/null 2>&1; then
+            echo "Signing DEB packages..."
+            dpkg-sig --sign builder \
+              --gpg-options "--batch --pinentry-mode loopback --passphrase-file $GNUPGHOME/passphrase" *.deb
+            dpkg-sig --verify *.deb
+          fi
+
+          # Generate checksums for RPM and DEB
+          for file in aerospike-prome*.rpm *.deb ; do
+            if [ -f "$file" ]; then
+              echo "Processing $file..."
+              sha256sum "$file" > "$file.sha256"
+            fi
+          done
+
+          # Generate checksums and GPG signatures for TGZ
+          for file in aerospike-prome*.tgz; do
+            if [ -f "$file" ]; then
+              echo "Generating sha256 and asc for $file"
+              sha256sum "$file" > "$file.sha256"
+              # asc for tgz
+              gpg --armour --detach-sign \
+                  --no-tty --batch --yes \
+                  --passphrase "$GPG_PASS" \
+                  --pinentry-mode loopback \
+                  --local-user aerospike-inc \
+                  --output "$file.asc" "$file"                    
+            fi
+          done
+
+      - name: Upload artifacts to release
         env:
           GH_TOKEN: ${{ github.token }}
           TAG_NAME: ${{ steps.get-latest-tag.outputs.tag }}
         run: |
-          files=$(find pkg/target -type f -name "aerospike-prome*" -printf "%p ")
-          for file in $files; do
-            echo "Uploading $file to release $TAG_NAME"
-            gh release upload "$TAG_NAME" "$file"
+          cd pkg/target
+
+          for file in aerospike-prome*; do
+            if [ -f "$file" ]; then
+              echo "Uploading $file to release $TAG_NAME"
+              gh release upload "$TAG_NAME" "$file"
+            fi
           done
-          
